--- a/expoint_me_dan/partnership-rule/assets/cashback/scss/content-desktop.scss
+++ b/expoint_me_dan/partnership-rule/assets/cashback/scss/content-desktop.scss
@@ -54,6 +54,9 @@
                 }
             }
             &-dest {
+                &_img {
+                    height: 147px;
+                }
                 margin-top: 24px;
                 .cashback-get_item-descr {
                     p {
@@ -262,6 +265,7 @@
                 .cashback-howto_tabs-ico {
                     width: 55px;
                     height: 55px;
+                    aspect-ratio: 1 / 1;
                 }
                 &:first-of-type {
                     &.active {
@@ -283,6 +287,7 @@
                         display: block;
                         height: 110%;
                         width: 100%;
+                        aspect-ratio: 1.1 / 1;
                         position: absolute; 
                         box-shadow: 0px 0px 12px rgba(0, 0, 0, .25);
                         z-index: -1;
@@ -302,6 +307,7 @@
                     .cashback-howto_tabs-ico {
                         width: 120px;
                         height: 120px;
+                        aspect-ratio: 1 / 1;
                     }
                 }
                 span {
